feat: rename layout

--- a/src/App.module.less
+++ b/src/App.module.less
@@ -26,8 +26,7 @@ p {
   }
 
   img {
-    float: left;
-    width: 40px;
+    float: left;    
     height: 64px;
     line-height: 64px;
   }
@@ -67,5 +66,11 @@ p {
 
   ol {
     list-style-type: decimal;
+  }
+
+  pre{
+    padding: 1em;
+    background: #f9f9f9;
+    border-radius: 0.5em;
   }
 }
